spacing input fix

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -264,7 +264,6 @@ textarea{
   background-color: $color-background;
   border: none;
   border-radius: 0px;
-  padding: $spacing-half;
   margin-left: 0;
   width: 100%;
   height: 450px;
