--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -114,7 +114,7 @@
         box-shadow: 0 10px 24px 0 rgba(184,184,184,1);
     }
     &__name {
-        padding-left: $spacing-third;
+        padding-left: 2px;
         width: 100%;
         text-align: left;
         & > * {
